--- a/Website users.ipynb
+++ b/Website users.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6ffc34c4",
+   "execution_count": 12,
+   "id": "182cfba5",
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +51,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "fb23f0a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your age? 60\n",
+      "Your age is 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "age=int(input(\"What is your age? \"))\n",
+    "\n",
+    "print(f\"Your age is {age}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6240ffe0",
+   "id": "d9a5774d",
    "metadata": {},
    "outputs": [],
    "source": []
